ניקוי הערות, עיבוי נתונים

--- a/ui/screens/case.html
+++ b/ui/screens/case.html
@@ -13,50 +13,15 @@
       <p><b>נוצר:</b> <span id="createdAt"></span></p>
     </div>
 
+    <!-- <div class="case-actions">
+      <h3>שינוי מצב</h3>
+      <select id="nextStatusSelect"></select>
+      <button onclick="changeCaseStatus()">אישור</button>
+    </div> -->
+
     <div class="case-card">
       <h4>היסטוריית מצבים</h4>
       <ul id="caseHistory" class="timeline"></ul>
     </div>
   </div>
 </div>
-
-
-
-<!-- <div class="case-container">
-
-  <h2 id="caseTitle">תיק</h2>
-
-  <div class="case-summary">
-    <div>
-      <strong>סטטוס נוכחי:</strong>
-      <span id="currentStatus"></span>
-    </div>
-    <div>
-      <strong>מסלול:</strong>
-      <span id="routeName"></span>
-    </div>
-  </div>
-
-  <div class="case-main">
-
-    <div class="case-details">
-      <h3>פרטי תיק</h3>
-      <p><strong>חייב:</strong> <span id="debtorName"></span></p>
-      <p><strong>סכום חוב:</strong> <span id="debtAmount"></span></p>
-      <p><strong>נפתח בתאריך:</strong> <span id="createdAt"></span></p>
-    </div>
-
-    <div class="case-actions">
-      <h3>שינוי מצב</h3>
-      <select id="nextStatusSelect"></select>
-      <button onclick="changeCaseStatus()">אישור</button>
-    </div>
-
-  </div>
-
-  <div class="case-history">
-    <h3>היסטוריית מצבים</h3>
-    <ul id="statusTimeline"></ul>
-  </div>
-
-</div> -->
