--- a/ui/screens/history.html
+++ b/ui/screens/history.html
@@ -1,7 +1,7 @@
 <div class="history-container">
   <h2>היסטוריית פעולות</h2>
 
-  <!-- 🔍 אזור סינון -->
+  <!-- אזור סינון -->
   <div class="history-filters">
     <select id="filterUser">
       <option value="">כל המשתמשים</option>
@@ -18,8 +18,7 @@
     <button onclick="resetHistoryFilters()">איפוס</button>
   </div>
 
-  <!-- 📋 טבלה -->
-  <!-- <table class="history-table"> -->
+  <!-- טבלה -->
   <table class="table table--history table--striped table--hover">
     <thead>
       <tr>
