--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   <script src="./js/screensjs/dashboard.js"></script>
   <script src="./js/screensjs/history.js"></script>
   <script src="./js/screensjs/case.js"></script>
-  <script src="./js/screensjs/routes.js"></script>
+  <script src="./js/screensjs/casesInRoute.js"></script>
   <script src="./js/screensjs/switchingModes.js"></script>
+  <script src="./js/screensjs/statusesInRoute.js"></script>
+  <script src="./js/screensjs/routes.js"></script>
 
   <!-- App / Router -->
   <script src="./js/app.js"></script>
