--- a/ui/screens/routes.html
+++ b/ui/screens/routes.html
@@ -1,12 +1,14 @@
-<select id="routeSelect"></select>
+<div class="routes-screen">
+  <h2>מסלולים</h2>
 
-<table class="table table--route table--striped table--hover">
-  <thead>
-    <tr>
-      <th>תיק</th>
-      <th>מצב</th>
-      <th>עודכן</th>
-    </tr>
-  </thead>
-  <tbody id="routeCases"></tbody>
-</table>
+  <table class="table table--striped table--hover">
+    <thead>
+      <tr>
+        <th>קוד מסלול</th>
+        <th>שם מסלול</th>
+        <th>תיאור</th>
+      </tr>
+    </thead>
+    <tbody id="routesTable"></tbody>
+  </table>
+</div>
